# wine_ml

./: poetry.toml  pyproject.toml
src/: wine_pretictor.ipynb
